# CVS $Id: Makefile.am,v 1.5 2006-03-08 22:44:30 wilm Exp $


bin_PROGRAMS = stral
stral_SOURCES = align.c create_matrix.c energy_const.h iofuncs.h \
	neighbor.h vectorops.h align.h create_matrix.h \
	 nrutils.c stral.c  \
	weighted_nj.c BIONJ.c dist.c nrutils.h \
	phylip.c stral.h  weighted_nj.h bionj.h dist.h iofuncs.c neighbor.c \
	 phylip.h alfuncs.c alfuncs.h config.h part_func.h part_func.c utils.h

SUBDIRS=doc
